# jodoapp_rs

./: .gitignore  Cargo.toml  README.md  jodo.sqlite
core/: Cargo.toml  package-lock.json  package.json
core/src/: cli.rs  db.rs  dialogue.rs  lib.rs  table.rs
src/: cli.rs  db.rs  main.rs  table.rs  todo.rs
ui/: package-lock.json  package.json
ui/src/: main.js
