[package]
name = "jodo-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "jodo-cli"
path = "src/cli.rs"

[dependencies]
clap = { version = "^3.0", features = ["derive"] }
color-eyre = "^0.5"
rusqlite = "^0.26"
comfy-table = "^5.0"
ansi_term = "^0.10"
dialoguer = { version = "^0.9", features = ["fuzzy-matcher"] }
napi = { version = "2.0.3", features = ["napi8"] }
napi-derive = "2.0.7"

[build-dependencies]
napi-build = "1.2.1"
